Revision history for rakudoc

{{$NEXT}}
    - Remove vim lines

0.2.5  2023-03-11T15:02:51-05:00
    - Switch to zef ecosystem
    - Change deprecated dependency Pod::Utilities to Pod::Utils
    - Fix deprecated code warning
    - Relax 04-compunit.t tests so they pass when installing via Zef and the
      prerequisite modules are not already installed
    - Cache source contents to ensure the IO handle is only slurped once
    - Ensure that, regardless of where the doc is found, its raw source is
      used if the rendered text is empty
    - Only use the first candidate from each repo when searching for doc
      files (i.e., don't look in older versions of a distribution)

0.2.4  2021-05-03T20:40:29-04:00
    - Fix portability issue (do not call .read-dist on
      CompUnit::Repository::Distribution)

0.2.3  2021-05-03T18:00:03-04:00
    - Copy simplified Documentable class into Rakudoc::Documentable, to
      remove complex dependency

0.2.2  2021-05-02T17:57:46-04:00
    - Import test-doc data directly to this repo (copied from
      Raku/Documentable), rather than rely on outdated testdata repo, to fix
      running tests without git submodule init.

0.2.1  2021-05-02T16:00:08-04:00
    - Rename to "rakudoc" from "Rakudoc"; "zef install rakudoc" will just
      work
    - Look for docs in distribution files (resources/*, bin/*, etc.)
    - Allow 'rakudoc ./path/to/a/file.rakudoc' to work

0.2.0  2021-05-01T13:37:34-04:00
    - Rewrite of some client internals
    - Use '.foo' to search for 'foo' method / subroutine
    - Indexing using '-b' switch
    - Multiple doc directories supported, using $*REPO and RAKUDOC
      environemnt variable
    - RAKUDOC_PAGER environment variable
    - RAKUDOC_DATA environment variable for cache / index storage directory
    - Faster caching
    - Display all matches, not only the first one
    - Display full text of matching CompUnit if it does not contain Pod docs