@@ -2,6 +2,7 @@ Revision history for rakudoc
 
 {{$NEXT}}
     - Remove vim lines
+    - Update sample doc files to .rakudoc extension
 
 0.2.5  2023-03-11T15:02:51-05:00
     - Switch to zef ecosystem
